maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:13: error: value &&! is not a member of Boolean
  while(!estSurBiscuit()&&!porteBiscuit()){
                        ^